--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,4 +1,22 @@
 .nav {
     grid-area: nav;
     background-color: darksalmon;
+    padding: 10px;
   }
+
+.links {
+  margin-bottom: 5px;
+}
+
+.links a{
+  color: black;
+  text-decoration: none;
+}
+
+.links a:hover {
+  color: yellow;
+}
+
+.links a.active {
+  color: red;
+}
