--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -7,6 +7,37 @@
   margin: 10px;
 }
 
+
+.dialogs__dialog {
+  display: flex;
+  margin-bottom: 10px;
+  align-items: center;
+  border: black 2px solid;
+  border-radius: 15px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.dialogs__dialog:hover {
+  background-color: gray;
+  opacity: 0.7;
+}
+
+.dialogs__dialog:hover a{
+  color: yellow;
+}
+
+
+.dialog__img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.dialog__name {
+  margin-left: 15px;
+}
+
 .dialogs__dialog a {
   color: black;
   text-decoration: none;
@@ -20,12 +51,27 @@
   color: red;
 }
 
+
+/*======Messages======*/
+
+
 .messages {
+  margin: 10px;
+  border: black 3px solid;
+}
+
+.message__area{
   margin: 10px;
 }
 
 .messages__message {
   margin-bottom: 10px;
+  border: red 1px solid;
+  border-radius: 50px;
+  background-color: rgb(187, 155, 187);
+  padding: 15px;
+  max-width: inherit;
+  width: fit-content;
 }
 
 
