--- a/src/components/Profile/MyPosts/Posts.module.css
+++ b/src/components/Profile/MyPosts/Posts.module.css
@@ -12,12 +12,12 @@
 }
 
 .newPost__area {
-
+  margin-right: 20px;
 }
 
 .newPost__buttons {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   width: 100%;
 }
 
@@ -27,3 +27,12 @@
   margin-bottom: 10px;
 }
 
+.post__textarea {
+  resize: none;
+  height: auto;
+  width: 100%;
+  height: auto;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 25px;
+}
