--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -81,7 +81,7 @@
 .message__textarea {
   resize: none;
   width: 100%;
-  height: auto;
+  height: 60px;
   padding: 10px;
   font-size: 14px;
   border-radius: 25px;
