--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -14,19 +14,24 @@
   margin-right: 30px;
 }
 
-.user__right {
+.user__info {
   display: flex;
   border: rgb(126, 122, 122) 2px solid;
   border-radius: 10px;
+  width: 600px;
 }
 
 .user__nameStatusWrapper {
   margin: 10px;
-  margin-right: 400px;
+  margin-left: 20px;
+  width: 50%;
 }
 
 .user__cityCountryWrapper {
   margin: 10px;
+  margin-right: 20px;
+  width: 50%;
+  text-align: right;
 }
 
 .user__name {
@@ -48,12 +53,10 @@
   font-weight: bold;
 }
 
-
-
-
 .user__avatar {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   margin: 10px;
 }
+
