--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,5 +13,25 @@
 
 .header__text {
   margin: 0 auto;
+}
 
+.login__wrapper {
+  margin-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login__button {
+  text-decoration: none;
+  color: yellow;
+}
+
+.login__button:hover {
+  color: red;
+}
+
+.userPhoto {
+  width: 30px;
+  margin-right: 10px;
 }
